parser/team21/Analisis_Ascendente/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CRDR
    CRIZQ
    ILIKE
    LLDR
    LLIZQ
    PRECISION
    SIMILAR

Grammar

Rule 0     S' -> s
Rule 1     s -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> CREATE TABLE ID PARIZQ campos PARDR PTCOMA
Rule 5     campos -> campos COMA campo
Rule 6     campos -> campo
Rule 7     campo -> ID tipo
Rule 8     campo -> ID tipo acompaniamiento
Rule 9     campo -> CONSTRAINT ID FOREIGN KEY PARIZQ ID PARDR REFERENCES ID PARIZQ ID PARDR
Rule 10    campo -> FOREIGN KEY PARIZQ ID PARDR REFERENCES ID PARIZQ ID PARDR
Rule 11    campo -> CADENA
Rule 12    campo -> PRIMARY KEY PARIZQ ID PARDR
Rule 13    acompaniamiento -> acompaniamiento acom
Rule 14    acompaniamiento -> acom
Rule 15    acom -> NOT NULL
Rule 16    acom -> NULL
Rule 17    acom -> UNIQUE
Rule 18    acom -> DEFAULT valores
Rule 19    acom -> PRIMARY KEY
Rule 20    acom -> CONSTRAINT ID
Rule 21    acom -> CHECK PARIZQ E PARDR
Rule 22    tipo -> SMALLINT
Rule 23    tipo -> INTEGER
Rule 24    tipo -> BIGINT
Rule 25    tipo -> DECIMAL
Rule 26    tipo -> NUMERIC
Rule 27    tipo -> REAL
Rule 28    tipo -> DOUBLE
Rule 29    tipo -> MONEY
Rule 30    tipo -> TEXT
Rule 31    tipo -> TIMESTAMP
Rule 32    tipo -> DATE
Rule 33    tipo -> TIME
Rule 34    tipo -> INTERVAL
Rule 35    tipo -> BOOLEAN
Rule 36    tipo -> CHARACTER PARIZQ ENTERO PARDR
Rule 37    tipo -> VARCHAR PARIZQ ENTERO PARDR
Rule 38    tipo -> CHAR PARIZQ ENTERO PARDR
Rule 39    tipo -> CHARACTER VARYING PARIZQ ENTERO PARDR
Rule 40    instruccion -> INSERT INTO ID PARIZQ listaID PARDR VALUES values PTCOMA
Rule 41    instruccion -> INSERT INTO ID VALUES values PTCOMA
Rule 42    listaID -> listaID COMA ID
Rule 43    listaID -> ID
Rule 44    values -> values COMA value
Rule 45    values -> value
Rule 46    value -> PARIZQ listaValores PARDR
Rule 47    listaValores -> listaValores COMA valores
Rule 48    listaValores -> valores
Rule 49    valores -> ENTERO
Rule 50    valores -> NUMDECIMAL
Rule 51    valores -> CADENA
Rule 52    valores2 -> valores
Rule 53    valores2 -> var
Rule 54    instruccion -> UPDATE ID SET asignaciones PTCOMA
Rule 55    instruccion -> UPDATE ID SET asignaciones WHERE andOr PTCOMA
Rule 56    asignaciones -> asignaciones COMA asignacion
Rule 57    asignaciones -> asignacion
Rule 58    where -> asignacion
Rule 59    where -> boolean
Rule 60    where -> NOT boolean
Rule 61    where -> valores2 comparisonP2
Rule 62    where -> boolean comparisonP
Rule 63    where -> ID IS NOT DISTINCT FROM valores
Rule 64    where -> ID IN PARIZQ listaValores PARDR
Rule 65    where -> ID BETWEEN valores AND valores
Rule 66    where -> ID IS DISTINCT FROM valores
Rule 67    comparisonP -> IS TRUE
Rule 68    comparisonP -> IS FALSE
Rule 69    comparisonP -> IS UNKNOWN
Rule 70    comparisonP -> IS NOT TRUE
Rule 71    comparisonP -> IS NOT FALSE
Rule 72    comparisonP -> IS NOT UNKNOWN
Rule 73    comparisonP2 -> IS NULL
Rule 74    comparisonP2 -> IS NOT NULL
Rule 75    comparisonP2 -> NOTNULL
Rule 76    comparisonP2 -> ISNULL
Rule 77    andOr -> andOr AND andOr
Rule 78    andOr -> andOr OR andOr
Rule 79    andOr -> where
Rule 80    asignacion -> var IGUAL E
Rule 81    E -> operando
Rule 82    E -> boolean
Rule 83    E -> unario
Rule 84    E -> valores
Rule 85    E -> var
Rule 86    E -> pnum
Rule 87    E -> math
Rule 88    E -> PARIZQ E PARDR
Rule 89    boolean -> FALSE
Rule 90    boolean -> TRUE
Rule 91    operando -> E MAS E
Rule 92    operando -> E MENOS E
Rule 93    operando -> E MULT E
Rule 94    operando -> E DIVI E
Rule 95    operando -> E MODU E
Rule 96    operando -> E EXPO E
Rule 97    operando -> E MENMEN E
Rule 98    operando -> E MAYMAY E
Rule 99    operando -> E ANDO E
Rule 100   operando -> E ORO E
Rule 101   boolean -> E IGUALIGUAL E
Rule 102   boolean -> E NOIGUAL E
Rule 103   boolean -> E MENMAY E
Rule 104   boolean -> E MENOR E
Rule 105   boolean -> E MAYOR E
Rule 106   boolean -> E MENORIGUAL E
Rule 107   boolean -> E MAYORIGUAL E
Rule 108   unario -> NOTO E
Rule 109   unario -> MENOS E
Rule 110   unario -> GNOT E
Rule 111   unario -> MAS E
Rule 112   var -> ID
Rule 113   var -> ID PUNTO ID
Rule 114   pnum -> PUNTO E
Rule 115   instruccion -> DELETE FROM ID WHERE andOr PTCOMA
Rule 116   instruccion -> DELETE FROM ID PTCOMA
Rule 117   instruccion -> DROP DATABASE ID PTCOMA
Rule 118   instruccion -> DROP DATABASE IF EXISTS ID PTCOMA
Rule 119   instruccion -> DROP TABLE ID PTCOMA
Rule 120   instruccion -> opcionCR ID PTCOMA
Rule 121   instruccion -> opcionCR IF NOT EXISTS ID PTCOMA
Rule 122   instruccion -> opcionCR ID complemento PTCOMA
Rule 123   instruccion -> opcionCR IF NOT EXISTS ID complemento PTCOMA
Rule 124   opcionCR -> CREATE DATABASE
Rule 125   opcionCR -> CREATE OR REPLACE DATABASE
Rule 126   complemento -> OWNER IGUAL ID
Rule 127   complemento -> OWNER ID
Rule 128   complemento -> OWNER IGUAL ID MODE IGUAL ENTERO
Rule 129   complemento -> OWNER ID MODE IGUAL ENTERO
Rule 130   complemento -> OWNER IGUAL ID MODE ENTERO
Rule 131   complemento -> OWNER ID MODE ENTERO
Rule 132   instruccion -> SHOW DATABASES PTCOMA
Rule 133   instruccion -> SHOW DATABASES LIKE CADENA PTCOMA
Rule 134   instruccion -> ALTER DATABASE ID RENAME TO ID PTCOMA
Rule 135   instruccion -> ALTER DATABASE ID OWNER TO ID PTCOMA
Rule 136   instruccion -> ALTER TABLE ID ADD COLUMN ID tipo PTCOMA
Rule 137   instruccion -> ALTER TABLE ID DROP COLUMN PTCOMA
Rule 138   instruccion -> ALTER TABLE ID ADD CHECK PARIZQ asignacion PARDR PTCOMA
Rule 139   instruccion -> ALTER TABLE ID ADD CONSTRAINT ID UNIQUE PARIZQ ID PARDR PTCOMA
Rule 140   instruccion -> ALTER TABLE ID ADD FOREIGN KEY PARIZQ listaID PARDR REFERENCES listaID PTCOMA
Rule 141   instruccion -> ALTER TABLE ID ALTER COLUMN ID SET NOT NULL PTCOMA
Rule 142   instruccion -> ALTER TABLE ID DROP CONSTRAINT ID PTCOMA
Rule 143   instruccion -> ALTER TABLE ID RENAME COLUMN ID TO ID PTCOMA
Rule 144   instruccion -> SELECT Time PTCOMA
Rule 145   Time -> EXTRACT PARIZQ momento FROM TIMESTAMP CADENA PARDR
Rule 146   Time -> date_part PARIZQ CADENA COMA INTERVAL CADENA PARDR
Rule 147   Time -> now PARIZQ PARDR
Rule 148   Time -> TIMESTAMP CADENA
Rule 149   Time -> CURRENT_TIME
Rule 150   Time -> CURRENT_DATE
Rule 151   momento -> YEAR
Rule 152   momento -> MONTH
Rule 153   momento -> DAY
Rule 154   momento -> HOUR
Rule 155   momento -> MINUTE
Rule 156   momento -> SECOND
Rule 157   instruccion -> select2 inst_union
Rule 158   instruccion -> select2 PTCOMA
Rule 159   inst_union -> UNION ALL select2 PTCOMA
Rule 160   inst_union -> INTERSECT ALL select2 PTCOMA
Rule 161   inst_union -> EXCEPT ALL select2 PTCOMA
Rule 162   inst_union -> UNION select2 PTCOMA
Rule 163   inst_union -> INTERSECT select2 PTCOMA
Rule 164   inst_union -> EXCEPT select2 PTCOMA
Rule 165   compSelect -> table_expr
Rule 166   compSelect -> table_expr GROUP BY compGroup
Rule 167   compGroup -> list
Rule 168   compGroup -> list HAVING andOr
Rule 169   select2 -> SELECT DISTINCT select_list FROM compSelect
Rule 170   select2 -> SELECT select_list FROM compSelect
Rule 171   select2 -> SELECT select_list
Rule 172   select2 -> SELECT select_list FROM table_expr WHERE complemSelect
Rule 173   complemSelect -> andOr
Rule 174   complemSelect -> andOr GROUP BY compGroup
Rule 175   select2 -> SELECT DISTINCT select_list FROM table_expr WHERE complemSelect
Rule 176   select_list -> MULT
Rule 177   select_list -> list
Rule 178   list -> list COMA columna
Rule 179   list -> columna
Rule 180   columna -> ID opcionID
Rule 181   columna -> ID AS ID
Rule 182   columna -> ID
Rule 183   columna -> ID AS CADENA
Rule 184   columna -> math AS ID
Rule 185   columna -> math AS CADENA
Rule 186   columna -> math
Rule 187   columna -> trig AS CADENA
Rule 188   columna -> trig
Rule 189   columna -> trig AS ID
Rule 190   opcionID -> PUNTO ascolumnaux
Rule 191   opcionID -> ID
Rule 192   ascolumnaux -> ID AS ID
Rule 193   ascolumnaux -> ID
Rule 194   ascolumnaux -> ID AS CADENA
Rule 195   math -> ABS PARIZQ E PARDR
Rule 196   math -> CBRT PARIZQ E PARDR
Rule 197   math -> CEIL PARIZQ E PARDR
Rule 198   math -> CEILING PARIZQ E PARDR
Rule 199   math -> DEGREES PARIZQ E PARDR
Rule 200   math -> EXP PARIZQ E PARDR
Rule 201   math -> FACTORIAL PARIZQ E PARDR
Rule 202   math -> FLOOR PARIZQ E PARDR
Rule 203   math -> LCM PARIZQ E PARDR
Rule 204   math -> LN PARIZQ E PARDR
Rule 205   math -> LOG PARIZQ E PARDR
Rule 206   math -> LOG10 PARIZQ E PARDR
Rule 207   math -> RADIANS PARIZQ E PARDR
Rule 208   math -> ROUND PARIZQ E PARDR
Rule 209   math -> SIGN PARIZQ E PARDR
Rule 210   math -> SQRT PARIZQ E PARDR
Rule 211   math -> TRUC PARIZQ E PARDR
Rule 212   math -> WIDTH_BUCKET PARIZQ E PARDR
Rule 213   math -> SETSEED PARIZQ E PARDR
Rule 214   math -> SUM PARIZQ E PARDR
Rule 215   math -> AVG PARIZQ E PARDR
Rule 216   math -> COUNT PARIZQ E PARDR
Rule 217   math -> MIN PARIZQ E PARDR
Rule 218   math -> MAX PARIZQ E PARDR
Rule 219   math -> DIV PARIZQ E COMA E PARDR
Rule 220   math -> GCD PARIZQ E COMA E PARDR
Rule 221   math -> MOD PARIZQ E COMA E PARDR
Rule 222   math -> POWER PARIZQ E COMA E PARDR
Rule 223   math -> PI PARIZQ PARDR
Rule 224   math -> RANDOM PARIZQ PARDR
Rule 225   math -> MIN_SCALE
Rule 226   math -> SCALE
Rule 227   math -> TRIM_SCALE
Rule 228   trig -> ACOS PARIZQ E PARDR
Rule 229   trig -> ACOSD PARIZQ E PARDR
Rule 230   trig -> ASIN PARIZQ E PARDR
Rule 231   trig -> ASIND PARIZQ E PARDR
Rule 232   trig -> ATAN PARIZQ E PARDR
Rule 233   trig -> ATAND PARIZQ E PARDR
Rule 234   trig -> ATAN2 PARIZQ E PARDR
Rule 235   trig -> ATAN2D PARIZQ E PARDR
Rule 236   trig -> COS PARIZQ E PARDR
Rule 237   trig -> COSD PARIZQ E PARDR
Rule 238   trig -> COT PARIZQ E PARDR
Rule 239   trig -> COTD PARIZQ E PARDR
Rule 240   trig -> SIN PARIZQ E PARDR
Rule 241   trig -> SIND PARIZQ E PARDR
Rule 242   trig -> TAN PARIZQ E PARDR
Rule 243   trig -> TAND PARIZQ E PARDR
Rule 244   trig -> SINH PARIZQ E PARDR
Rule 245   trig -> COSH PARIZQ E PARDR
Rule 246   trig -> TANH PARIZQ E PARDR
Rule 247   trig -> ASINH PARIZQ E PARDR
Rule 248   trig -> ACOSH PARIZQ E PARDR
Rule 249   trig -> ATANH PARIZQ E PARDR
Rule 250   table_expr -> table_expr COMA tablaR
Rule 251   table_expr -> tablaR
Rule 252   tablaR -> ID ID
Rule 253   tablaR -> ID AS ID
Rule 254   tablaR -> ID
Rule 255   instruccion -> CREATE TYPE ID AS ENUM PARIZQ campos PARDR PTCOMA

Terminals, with rules where they appear

ABS                  : 195
ACOS                 : 228
ACOSD                : 229
ACOSH                : 248
ADD                  : 136 138 139 140
ALL                  : 159 160 161
ALTER                : 134 135 136 137 138 139 140 141 141 142 143
AND                  : 65 77
ANDO                 : 99
AS                   : 181 183 184 185 187 189 192 194 253 255
ASIN                 : 230
ASIND                : 231
ASINH                : 247
ATAN                 : 232
ATAN2                : 234
ATAN2D               : 235
ATAND                : 233
ATANH                : 249
AVG                  : 215
BETWEEN              : 65
BIGINT               : 24
BOOLEAN              : 35
BY                   : 166 174
CADENA               : 11 51 133 145 146 146 148 183 185 187 194
CBRT                 : 196
CEIL                 : 197
CEILING              : 198
CHAR                 : 38
CHARACTER            : 36 39
CHECK                : 21 138
COLUMN               : 136 137 141 143
COMA                 : 5 42 44 47 56 146 178 219 220 221 222 250
CONSTRAINT           : 9 20 139 142
COS                  : 236
COSD                 : 237
COSH                 : 245
COT                  : 238
COTD                 : 239
COUNT                : 216
CRDR                 : 
CREATE               : 4 124 125 255
CRIZQ                : 
CURRENT_DATE         : 150
CURRENT_TIME         : 149
DATABASE             : 117 118 124 125 134 135
DATABASES            : 132 133
DATE                 : 32
DAY                  : 153
DECIMAL              : 25
DEFAULT              : 18
DEGREES              : 199
DELETE               : 115 116
DISTINCT             : 63 66 169 175
DIV                  : 219
DIVI                 : 94
DOUBLE               : 28
DROP                 : 117 118 119 137 142
ENTERO               : 36 37 38 39 49 128 129 130 131
ENUM                 : 255
EXCEPT               : 161 164
EXISTS               : 118 121 123
EXP                  : 200
EXPO                 : 96
EXTRACT              : 145
FACTORIAL            : 201
FALSE                : 68 71 89
FLOOR                : 202
FOREIGN              : 9 10 140
FROM                 : 63 66 115 116 145 169 170 172 175
GCD                  : 220
GNOT                 : 110
GROUP                : 166 174
HAVING               : 168
HOUR                 : 154
ID                   : 4 7 8 9 9 9 9 10 10 10 12 20 40 41 42 43 54 55 63 64 65 66 112 113 113 115 116 117 118 119 120 121 122 123 126 127 128 129 130 131 134 134 135 135 136 136 137 138 139 139 139 140 141 141 142 142 143 143 143 180 181 181 182 183 184 189 191 192 192 193 194 252 252 253 253 254 255
IF                   : 118 121 123
IGUAL                : 80 126 128 128 129 130
IGUALIGUAL           : 101
ILIKE                : 
IN                   : 64
INSERT               : 40 41
INTEGER              : 23
INTERSECT            : 160 163
INTERVAL             : 34 146
INTO                 : 40 41
IS                   : 63 66 67 68 69 70 71 72 73 74
ISNULL               : 76
KEY                  : 9 10 12 19 140
LCM                  : 203
LIKE                 : 133
LLDR                 : 
LLIZQ                : 
LN                   : 204
LOG                  : 205
LOG10                : 206
MAS                  : 91 111
MAX                  : 218
MAYMAY               : 98
MAYOR                : 105
MAYORIGUAL           : 107
MENMAY               : 103
MENMEN               : 97
MENOR                : 104
MENORIGUAL           : 106
MENOS                : 92 109
MIN                  : 217
MINUTE               : 155
MIN_SCALE            : 225
MOD                  : 221
MODE                 : 128 129 130 131
MODU                 : 95
MONEY                : 29
MONTH                : 152
MULT                 : 93 176
NOIGUAL              : 102
NOT                  : 15 60 63 70 71 72 74 121 123 141
NOTNULL              : 75
NOTO                 : 108
NULL                 : 15 16 73 74 141
NUMDECIMAL           : 50
NUMERIC              : 26
OR                   : 78 125
ORO                  : 100
OWNER                : 126 127 128 129 130 131 135
PARDR                : 4 9 9 10 10 12 21 36 37 38 39 40 46 64 88 138 139 140 145 146 147 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 255
PARIZQ               : 4 9 9 10 10 12 21 36 37 38 39 40 46 64 88 138 139 140 145 146 147 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 220 221 222 223 224 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249 255
PI                   : 223
POWER                : 222
PRECISION            : 
PRIMARY              : 12 19
PTCOMA               : 4 40 41 54 55 115 116 117 118 119 120 121 122 123 132 133 134 135 136 137 138 139 140 141 142 143 144 158 159 160 161 162 163 164 255
PUNTO                : 113 114 190
RADIANS              : 207
RANDOM               : 224
REAL                 : 27
REFERENCES           : 9 10 140
RENAME               : 134 143
REPLACE              : 125
ROUND                : 208
SCALE                : 226
SECOND               : 156
SELECT               : 144 169 170 171 172 175
SET                  : 54 55 141
SETSEED              : 213
SHOW                 : 132 133
SIGN                 : 209
SIMILAR              : 
SIN                  : 240
SIND                 : 241
SINH                 : 244
SMALLINT             : 22
SQRT                 : 210
SUM                  : 214
TABLE                : 4 119 136 137 138 139 140 141 142 143
TAN                  : 242
TAND                 : 243
TANH                 : 246
TEXT                 : 30
TIME                 : 33
TIMESTAMP            : 31 145 148
TO                   : 134 135 143
TRIM_SCALE           : 227
TRUC                 : 211
TRUE                 : 67 70 90
TYPE                 : 255
UNION                : 159 162
UNIQUE               : 17 139
UNKNOWN              : 69 72
UPDATE               : 54 55
VALUES               : 40 41
VARCHAR              : 37
VARYING              : 39
WHERE                : 55 115 172 175
WIDTH_BUCKET         : 212
YEAR                 : 151
date_part            : 146
error                : 
now                  : 147

Nonterminals, with rules where they appear

E                    : 21 80 88 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 103 104 104 105 105 106 106 107 107 108 109 110 111 114 195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210 211 212 213 214 215 216 217 218 219 219 220 220 221 221 222 222 228 229 230 231 232 233 234 235 236 237 238 239 240 241 242 243 244 245 246 247 248 249
Time                 : 144
acom                 : 13 14
acompaniamiento      : 8 13
andOr                : 55 77 77 78 78 115 168 173 174
ascolumnaux          : 190
asignacion           : 56 57 58 138
asignaciones         : 54 55 56
boolean              : 59 60 62 82
campo                : 5 6
campos               : 4 5 255
columna              : 178 179
compGroup            : 166 174
compSelect           : 169 170
comparisonP          : 62
comparisonP2         : 61
complemSelect        : 172 175
complemento          : 122 123
inst_union           : 157
instruccion          : 2 3
instrucciones        : 1 2
list                 : 167 168 177 178
listaID              : 40 42 140 140
listaValores         : 46 47 64
math                 : 87 184 185 186
momento              : 145
opcionCR             : 120 121 122 123
opcionID             : 180
operando             : 81
pnum                 : 86
s                    : 0
select2              : 157 158 159 160 161 162 163 164
select_list          : 169 170 171 172 175
tablaR               : 250 251
table_expr           : 165 166 172 175 250
tipo                 : 7 8 136
trig                 : 187 188 189
unario               : 83
valores              : 18 47 48 52 63 65 65 66 84
valores2             : 61
value                : 44 45
values               : 40 41 44
var                  : 53 80 85
where                : 79

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . CREATE TABLE ID PARIZQ campos PARDR PTCOMA
    (40) instruccion -> . INSERT INTO ID PARIZQ listaID PARDR VALUES values PTCOMA
    (41) instruccion -> . INSERT INTO ID VALUES values PTCOMA
    (54) instruccion -> . UPDATE ID SET asignaciones PTCOMA
    (55) instruccion -> . UPDATE ID SET asignaciones WHERE andOr PTCOMA
    (115) instruccion -> . DELETE FROM ID WHERE andOr PTCOMA
    (116) instruccion -> . DELETE FROM ID PTCOMA
    (117) instruccion -> . DROP DATABASE ID PTCOMA
    (118) instruccion -> . DROP DATABASE IF EXISTS ID PTCOMA
    (119) instruccion -> . DROP TABLE ID PTCOMA
    (120) instruccion -> . opcionCR ID PTCOMA
    (121) instruccion -> . opcionCR IF NOT EXISTS ID PTCOMA
    (122) instruccion -> . opcionCR ID complemento PTCOMA
    (123) instruccion -> . opcionCR IF NOT EXISTS ID complemento PTCOMA
    (132) instruccion -> . SHOW DATABASES PTCOMA
    (133) instruccion -> . SHOW DATABASES LIKE CADENA PTCOMA
    (134) instruccion -> . ALTER DATABASE ID RENAME TO ID PTCOMA
    (135) instruccion -> . ALTER DATABASE ID OWNER TO ID PTCOMA
    (136) instruccion -> . ALTER TABLE ID ADD COLUMN ID tipo PTCOMA
    (137) instruccion -> . ALTER TABLE ID DROP COLUMN PTCOMA
    (138) instruccion -> . ALTER TABLE ID ADD CHECK PARIZQ asignacion PARDR PTCOMA
    (139) instruccion -> . ALTER TABLE ID ADD CONSTRAINT ID UNIQUE PARIZQ ID PARDR PTCOMA
    (140) instruccion -> . ALTER TABLE ID ADD FOREIGN KEY PARIZQ listaID PARDR REFERENCES listaID PTCOMA
    (141) instruccion -> . ALTER TABLE ID ALTER COLUMN ID SET NOT NULL PTCOMA
    (142) instruccion -> . ALTER TABLE ID DROP CONSTRAINT ID PTCOMA
    (143) instruccion -> . ALTER TABLE ID RENAME COLUMN ID TO ID PTCOMA
    (144) instruccion -> . SELECT Time PTCOMA
    (157) instruccion -> . select2 inst_union
    (158) instruccion -> . select2 PTCOMA
    (255) instruccion -> . CREATE TYPE ID AS ENUM PARIZQ campos PARDR PTCOMA
    (124) opcionCR -> . CREATE DATABASE
    (125) opcionCR -> . CREATE OR REPLACE DATABASE
    (169) select2 -> . SELECT DISTINCT select_list FROM compSelect
    (170) select2 -> . SELECT select_list FROM compSelect
    (171) select2 -> . SELECT select_list
    (172) select2 -> . SELECT select_list FROM table_expr WHERE complemSelect
    (175) select2 -> . SELECT DISTINCT select_list FROM table_expr WHERE complemSelect

    CREATE          shift and go to state 4
    INSERT          shift and go to state 5
    UPDATE          shift and go to state 6
    DELETE          shift and go to state 7
    DROP            shift and go to state 8
    SHOW            shift and go to state 10
    ALTER           shift and go to state 11
    SELECT          shift and go to state 12

    s                              shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    opcionCR                       shift and go to state 9
    select2                        shift and go to state 13

state 1

    (0) S' -> s .



state 2

    (1) s -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . CREATE TABLE ID PARIZQ campos PARDR PTCOMA
    (40) instruccion -> . INSERT INTO ID PARIZQ listaID PARDR VALUES values PTCOMA
    (41) instruccion -> . INSERT INTO ID VALUES values PTCOMA
    (54) instruccion -> . UPDATE ID SET asignaciones PTCOMA
    (55) instruccion -> . UPDATE ID SET asignaciones WHERE andOr PTCOMA
    (115) instruccion -> . DELETE FROM ID WHERE andOr PTCOMA
    (116) instruccion -> . DELETE FROM ID PTCOMA
    (117) instruccion -> . DROP DATABASE ID PTCOMA
    (118) instruccion -> . DROP DATABASE IF EXISTS ID PTCOMA
    (119) instruccion -> . DROP TABLE ID PTCOMA
    (120) instruccion -> . opcionCR ID PTCOMA
    (121) instruccion -> . opcionCR IF NOT EXISTS ID PTCOMA
    (122) instruccion -> . opcionCR ID complemento PTCOMA
    (123) instruccion -> . opcionCR IF NOT EXISTS ID complemento PTCOMA
    (132) instruccion -> . SHOW DATABASES PTCOMA
    (133) instruccion -> . SHOW DATABASES LIKE CADENA PTCOMA
    (134) instruccion -> . ALTER DATABASE ID RENAME TO ID PTCOMA
    (135) instruccion -> . ALTER DATABASE ID OWNER TO ID PTCOMA
    (136) instruccion -> . ALTER TABLE ID ADD COLUMN ID tipo PTCOMA
    (137) instruccion -> . ALTER TABLE ID DROP COLUMN PTCOMA
    (138) instruccion -> . ALTER TABLE ID ADD CHECK PARIZQ asignacion PARDR PTCOMA
    (139) instruccion -> . ALTER TABLE ID ADD CONSTRAINT ID UNIQUE PARIZQ ID PARDR PTCOMA
    (140) instruccion -> . ALTER TABLE ID ADD FOREIGN KEY PARIZQ listaID PARDR REFERENCES listaID PTCOMA
    (141) instruccion -> . ALTER TABLE ID ALTER COLUMN ID SET NOT NULL PTCOMA
    (142) instruccion -> . ALTER TABLE ID DROP CONSTRAINT ID PTCOMA
    (143) instruccion -> . ALTER TABLE ID RENAME COLUMN ID TO ID PTCOMA
    (144) instruccion -> . SELECT Time PTCOMA
    (157) instruccion -> . select2 inst_union
    (158) instruccion -> . select2 PTCOMA
    (255) instruccion -> . CREATE TYPE ID AS ENUM PARIZQ campos PARDR PTCOMA
    (124) opcionCR -> . CREATE DATABASE
    (125) opcionCR -> . CREATE OR REPLACE DATABASE
    (169) select2 -> . SELECT DISTINCT select_list FROM compSelect
    (170) select2 -> . SELECT select_list FROM compSelect
    (171) select2 -> . SELECT select_list
    (172) select2 -> . SELECT select_list FROM table_expr WHERE complemSelect
    (175) select2 -> . SELECT DISTINCT select_list FROM table_expr WHERE complemSelect

    $end            reduce using rule 1 (s -> instrucciones .)
    CREATE          shift and go to state 4
    INSERT          shift and go to state 5
    UPDATE          shift and go to state 6
    DELETE          shift and go to state 7
    DROP            shift and go to state 8
    SHOW            shift and go to state 10
    ALTER           shift and go to state 11
    SELECT          shift and go to state 12

    instruccion                    shift and go to state 14
    opcionCR                       shift and go to state 9
    select2                        shift and go to state 13

state 3

    (3) instrucciones -> instruccion .

    CREATE          reduce using rule 3 (instrucciones -> instruccion .)
    INSERT          reduce using rule 3 (instrucciones -> instruccion .)
    UPDATE          reduce using rule 3 (instrucciones -> instruccion .)
    DELETE          reduce using rule 3 (instrucciones -> instruccion .)
    DROP            reduce using rule 3 (instrucciones -> instruccion .)
    SHOW            reduce using rule 3 (instrucciones -> instruccion .)
    ALTER           reduce using rule 3 (instrucciones -> instruccion .)
    SELECT          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> CREATE . TABLE ID PARIZQ campos PARDR PTCOMA
    (255) instruccion -> CREATE . TYPE ID AS ENUM PARIZQ campos PARDR PTCOMA
    (124) opcionCR -> CREATE . DATABASE
    (125) opcionCR -> CREATE . OR REPLACE DATABASE

    TABLE           shift and go to state 15
    TYPE            shift and go to state 16
    DATABASE        shift and go to state 17
    OR              shift and go to state 18


state 5

    (40) instruccion -> INSERT . INTO ID PARIZQ listaID PARDR VALUES values PTCOMA
    (41) instruccion -> INSERT . INTO ID VALUES values PTCOMA

    INTO            shift and go to state 19


state 6

    (54) instruccion -> UPDATE . ID SET asignaciones PTCOMA
    (55) instruccion -> UPDATE . ID SET asignaciones WHERE andOr PTCOMA

    ID              shift and go to state 20


state 7

    (115) instruccion -> DELETE . FROM ID WHERE andOr PTCOMA
    (116) instruccion -> DELETE . FROM ID PTCOMA

    FROM            shift and go to state 21


state 8

    (117) instruccion -> DROP . DATABASE ID PTCOMA
    (118) instruccion -> DROP . DATABASE IF EXISTS ID PTCOMA
    (119) instruccion -> DROP . TABLE ID PTCOMA

    DATABASE        shift and go to state 22
    TABLE           shift and go to state 23


state 9

    (120) instruccion -> opcionCR . ID PTCOMA
    (121) instruccion -> opcionCR . IF NOT EXISTS ID PTCOMA
    (122) instruccion -> opcionCR . ID complemento PTCOMA
    (123) instruccion -> opcionCR . IF NOT EXISTS ID complemento PTCOMA

    ID              shift and go to state 24
    IF              shift and go to state 25


state 10

    (132) instruccion -> SHOW . DATABASES PTCOMA
    (133) instruccion -> SHOW . DATABASES LIKE CADENA PTCOMA

    DATABASES       shift and go to state 26


state 11

    (134) instruccion -> ALTER . DATABASE ID RENAME TO ID PTCOMA
    (135) instruccion -> ALTER . DATABASE ID OWNER TO ID PTCOMA
    (136) instruccion -> ALTER . TABLE ID ADD COLUMN ID tipo PTCOMA
    (137) instruccion -> ALTER . TABLE ID DROP COLUMN PTCOMA
    (138) instruccion -> ALTER . TABLE ID ADD CHECK PARIZQ asignacion PARDR PTCOMA
    (139) instruccion -> ALTER . TABLE ID ADD CONSTRAINT ID UNIQUE PARIZQ ID PARDR PTCOMA
    (140) instruccion -> ALTER . TABLE ID ADD FOREIGN KEY PARIZQ listaID PARDR REFERENCES listaID PTCOMA
    (141) instruccion -> ALTER . TABLE ID ALTER COLUMN ID SET NOT NULL PTCOMA
    (142) instruccion -> ALTER . TABLE ID DROP CONSTRAINT ID PTCOMA
    (143) instruccion -> ALTER . TABLE ID RENAME COLUMN ID TO ID PTCOMA

    DATABASE        shift and go to state 27
    TABLE           shift and go to state 28


state 12
